--- a/CTT/mainwindow.ui
+++ b/CTT/mainwindow.ui
@@ -16,8 +16,24 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>1374</width>
+    <height>720</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1374</width>
+    <height>720</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Code Typing Trainer</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../../CTT/text-box.png</normaloff>../../CTT/text-box.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
@@ -25,6 +41,18 @@
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>1374</width>
+     <height>720</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>1374</width>
+     <height>720</height>
+    </size>
    </property>
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="enabled">
@@ -44,6 +72,18 @@
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
+    <property name="minimumSize">
+     <size>
+      <width>1500</width>
+      <height>720</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>1500</width>
+      <height>720</height>
+     </size>
+    </property>
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
     </property>
@@ -54,7 +94,7 @@
      <string notr="true"/>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="mainScreen">
      <property name="sizePolicy">
@@ -62,6 +102,18 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>1500</width>
+       <height>720</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>1500</width>
+       <height>720</height>
+      </size>
      </property>
      <widget class="QLabel" name="SelectTime">
       <property name="geometry">
@@ -74,12 +126,11 @@
       </property>
       <property name="font">
        <font>
-        <family>Agency FB</family>
         <pointsize>50</pointsize>
        </font>
       </property>
       <property name="text">
-       <string>Select limit time</string>
+       <string notr="true">Select limit time</string>
       </property>
       <property name="textFormat">
        <enum>Qt::PlainText</enum>
@@ -99,6 +150,9 @@
         <width>391</width>
         <height>81</height>
        </rect>
+      </property>
+      <property name="currentText">
+       <string notr="true">1 Minute</string>
       </property>
       <item>
        <property name="text">
@@ -126,7 +180,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Start!</string>
+       <string notr="true">Start!</string>
       </property>
      </widget>
      <widget class="QLabel" name="timerIcon">
@@ -141,6 +195,12 @@
       <property name="text">
        <string/>
       </property>
+      <property name="pixmap">
+       <pixmap>sand-clock.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="testScreen">
@@ -150,14 +210,32 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="minimumSize">
+      <size>
+       <width>1500</width>
+       <height>720</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>1500</width>
+       <height>720</height>
+      </size>
+     </property>
      <widget class="QLineEdit" name="myLineEdit">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>10</x>
         <y>590</y>
-        <width>1371</width>
+        <width>1351</width>
         <height>121</height>
        </rect>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
       <property name="font">
        <font>
@@ -172,14 +250,20 @@
        <string notr="true">background-color: rgb(244, 247, 248);
 border-color: rgb(227, 235, 238);</string>
       </property>
+      <property name="inputMask">
+       <string notr="true"/>
+      </property>
       <property name="text">
-       <string/>
+       <string notr="true"/>
       </property>
       <property name="maxLength">
        <number>60</number>
       </property>
       <property name="frame">
        <bool>true</bool>
+      </property>
+      <property name="placeholderText">
+       <string notr="true"/>
       </property>
      </widget>
      <widget class="QLCDNumber" name="lcdRemainTime">
@@ -216,47 +300,191 @@ border-color: rgb(227, 235, 238);</string>
       <property name="text">
        <string/>
       </property>
+      <property name="pixmap">
+       <pixmap>../../CTT/sand-clock.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
      </widget>
-     <widget class="QPlainTextEdit" name="currentCode">
+     <widget class="Line" name="upLine">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>200</y>
-        <width>1371</width>
+        <x>20</x>
+        <y>270</y>
+        <width>1341</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(85, 170, 255);</string>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>3</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="Line" name="downLine">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>410</y>
+        <width>1341</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(85, 170, 255);</string>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>3</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="currentCode">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>290</y>
+        <width>1341</width>
         <height>121</height>
        </rect>
       </property>
-      <property name="lineWrapMode">
-       <enum>QPlainTextEdit::WidgetWidth</enum>
+      <property name="font">
+       <font>
+        <family>Consolas</family>
+        <pointsize>25</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
       </property>
-      <property name="readOnly">
-       <bool>true</bool>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);
+font: 25pt &quot;Consolas&quot;;</string>
       </property>
-      <property name="plainText">
-       <string/>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
-      <property name="cursorWidth">
-       <number>5</number>
+      <property name="textFormat">
+       <enum>Qt::AutoText</enum>
+      </property>
+      <property name="scaledContents">
+       <bool>false</bool>
       </property>
      </widget>
-     <widget class="QPlainTextEdit" name="nextCode">
+     <widget class="QLabel" name="nextCode">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>440</y>
+        <width>1341</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Consolas</family>
+        <pointsize>25</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgba(206, 206, 206, 128);
+border-color: rgba(206, 206, 206, 128);
+font: 25pt &quot;Consolas&quot;;</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="scaledContents">
+       <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="Line" name="leftLine">
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>390</y>
-        <width>1371</width>
+        <y>290</y>
+        <width>31</width>
         <height>121</height>
        </rect>
       </property>
       <property name="styleSheet">
+       <string notr="true">color: rgb(85, 170, 255);</string>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>3</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="Line" name="rightLine">
+      <property name="geometry">
+       <rect>
+        <x>1349</x>
+        <y>290</y>
+        <width>31</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(85, 170, 255);</string>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>3</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="prevCode">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>130</y>
+        <width>1341</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Consolas</family>
+        <pointsize>25</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
        <string notr="true">background-color: rgba(206, 206, 206, 128);
-border-color: rgba(206, 206, 206, 128);</string>
+border-color: rgba(206, 206, 206, 128);
+font: 25pt &quot;Consolas&quot;;</string>
       </property>
-      <property name="frameShape">
-       <enum>QFrame::NoFrame</enum>
+      <property name="text">
+       <string/>
       </property>
-      <property name="readOnly">
-       <bool>true</bool>
+      <property name="scaledContents">
+       <bool>false</bool>
       </property>
      </widget>
     </widget>
@@ -266,6 +494,18 @@ border-color: rgba(206, 206, 206, 128);</string>
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>1500</width>
+       <height>720</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>1500</width>
+       <height>720</height>
+      </size>
      </property>
      <widget class="QLabel" name="resultTitle">
       <property name="geometry">
@@ -278,14 +518,13 @@ border-color: rgba(206, 206, 206, 128);</string>
       </property>
       <property name="font">
        <font>
-        <family>Agency FB</family>
         <pointsize>50</pointsize>
         <weight>50</weight>
         <bold>false</bold>
        </font>
       </property>
       <property name="text">
-       <string>[RESULT]</string>
+       <string notr="true">[RESULT]</string>
       </property>
       <property name="textFormat">
        <enum>Qt::PlainText</enum>
@@ -300,7 +539,7 @@ border-color: rgba(206, 206, 206, 128);</string>
      <widget class="QDialogButtonBox" name="buttonBox">
       <property name="geometry">
        <rect>
-        <x>470</x>
+        <x>450</x>
         <y>500</y>
         <width>461</width>
         <height>101</height>
@@ -308,9 +547,17 @@ border-color: rgba(206, 206, 206, 128);</string>
       </property>
       <property name="font">
        <font>
-        <family>Consolas</family>
         <pointsize>40</pointsize>
        </font>
+      </property>
+      <property name="accessibleName">
+       <string notr="true"/>
+      </property>
+      <property name="accessibleDescription">
+       <string notr="true"/>
+      </property>
+      <property name="locale">
+       <locale language="English" country="UnitedStates"/>
       </property>
       <property name="standardButtons">
        <set>QDialogButtonBox::Close|QDialogButtonBox::Retry</set>
