--- a/CTT/mainwindow.ui
+++ b/CTT/mainwindow.ui
@@ -94,7 +94,7 @@
      <string notr="true"/>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="mainScreen">
      <property name="sizePolicy">
@@ -240,7 +240,10 @@
       <property name="font">
        <font>
         <family>Consolas</family>
-        <pointsize>30</pointsize>
+        <pointsize>25</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
        </font>
       </property>
       <property name="cursor">
@@ -248,7 +251,8 @@
       </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(244, 247, 248);
-border-color: rgb(227, 235, 238);</string>
+border-color: rgb(227, 235, 238);
+font: 25pt &quot;Consolas&quot;;</string>
       </property>
       <property name="inputMask">
        <string notr="true"/>
@@ -257,7 +261,7 @@ border-color: rgb(227, 235, 238);</string>
        <string notr="true"/>
       </property>
       <property name="maxLength">
-       <number>60</number>
+       <number>75</number>
       </property>
       <property name="frame">
        <bool>true</bool>
@@ -510,8 +514,8 @@ font: 25pt &quot;Consolas&quot;;</string>
      <widget class="QLabel" name="resultTitle">
       <property name="geometry">
        <rect>
-        <x>360</x>
-        <y>135</y>
+        <x>330</x>
+        <y>60</y>
         <width>660</width>
         <height>121</height>
        </rect>
@@ -539,8 +543,8 @@ font: 25pt &quot;Consolas&quot;;</string>
      <widget class="QDialogButtonBox" name="buttonBox">
       <property name="geometry">
        <rect>
-        <x>450</x>
-        <y>500</y>
+        <x>430</x>
+        <y>520</y>
         <width>461</width>
         <height>101</height>
        </rect>
@@ -564,6 +568,153 @@ font: 25pt &quot;Consolas&quot;;</string>
       </property>
       <property name="centerButtons">
        <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="speedIcon">
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>230</y>
+        <width>101</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>../../build-CTT-Desktop_Qt_6_2_1_MSVC2019_64bit-Debug/debug/speed.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="accuracyIcon">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>400</y>
+        <width>81</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>../../build-CTT-Desktop_Qt_6_2_1_MSVC2019_64bit-Debug/debug/accuracy.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="speedFigure">
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>230</y>
+        <width>771</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>나눔스퀘어</family>
+        <pointsize>30</pointsize>
+        <italic>false</italic>
+        <kerning>true</kerning>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(85, 170, 255);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::WinPanel</enum>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="accuracyFigure">
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>390</y>
+        <width>771</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>나눔스퀘어</family>
+        <pointsize>30</pointsize>
+        <italic>false</italic>
+        <strikeout>false</strikeout>
+        <kerning>true</kerning>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(85, 170, 255);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::WinPanel</enum>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="speedTitle">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>250</y>
+        <width>251</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>NanumSquare</family>
+        <pointsize>30</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>SPEED</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="accuracyTitle">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>410</y>
+        <width>251</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>NanumSquare</family>
+        <pointsize>30</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>ACCURACY</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </widget>
